Downgrade to Java 11 (#141)
Downgrade to Java 11, lowest level we can go as Search API  is also Java 11. Going for 8 would require us to split APIs and Mojos and is meh.